# python_chat

./: .gitignore  README.md  pyproject.toml
chat/: client.py  server.py
client/: client.py
server/: server.py
