[project]
name = "chat-project"
version = "0.1.0"
description = ""
authors = [
    {name = "symbbad",email = "symbbad@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "rich (>=13.9.4,<14.0.0)",
    "typer (>=0.15.1,<0.16.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
black = "^25.1.0"
mypy = "^1.15.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
pre-commit = "^4.1.0"

